@@ -1,5 +1,9 @@
 2004-10-10  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/draw-context.cpp (spdc_endpoint_snap_handle):
+	  Change argument type from SPDrawContext to SPPenContext, and
+	  specialize definition accordingly.  Caller updated.
+
 	* src/draw-context.h: Change red_curve_is_valid from char to bool.
 	* src/draw-context.cpp: Change red_curve_is_valid assignments from
 	  0x00/0x01 to false/true (using find & replace).
